# Dance-Notation-ETL

./: .gitignore  DOCS.md  README.md  THEORY.md  flake.nix  pyproject.toml
assets/: MCPM_20260423_140006.bvh  MCPM_20260612_135307.bvh  MCPM_20260612_135327.bvh  MCPM_20260612_135338.bvh  MCPM_20260612_135401.bvh  MCPM_20260612_135430.bvh  MCPM_20260612_135445.bvh  MCPM_20260612_135829.bvh  MCPM_20260612_135850.bvh
src/: dtw.py  etl.ipynb  kinematics.py  model.py  motion.py  pyplot.py  segmentation.py
